added upload job on each workflow

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -105,6 +105,6 @@ jobs:
 
     - name: Ezored - Dist upload
       env:
-        EZORED_AWS_KEY_ID: ${{ env.EZORED_AWS_KEY_ID }}
-        EZORED_AWS_SECRET_KEY: ${{ env.EZORED_AWS_SECRET_KEY }}
+        EZORED_AWS_KEY_ID: ${{ secrets.EZORED_AWS_KEY_ID }}
+        EZORED_AWS_SECRET_KEY: ${{ secrets.EZORED_AWS_SECRET_KEY }}
       run: python make.py target ${{ matrix.config.target }} dist upload --force
