--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -98,7 +98,7 @@ jobs:
       run: python make.py target ${{ matrix.config.target }} build
 
     - name: Ezored - Package
-      run: python make.py target ${{ matrix.config.target }} package
+      run: python make.py target ${{ matrix.config.target }} package --no-framework
 
     - name: Ezored - Dist generate
       run: python make.py target ${{ matrix.config.target }} dist generate
