add support for tvos and watchos

--- a/files/targets/ios_framework/cmake/CMakeLists.txt
+++ b/files/targets/ios_framework/cmake/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Configurations
-cmake_minimum_required(VERSION 3.19.0)
+cmake_minimum_required(VERSION 3.20.0)
 get_filename_component(CMAKE_SOURCE_REALPATH "${CMAKE_SOURCE_DIR}/../../../../" REALPATH)
 
 set(PROJECT_CONFIG_NAME "ezored" CACHE STRING "Project Name")
@@ -19,7 +19,18 @@ set(DEVELOPMENT_TEAM_ID "" CACHE STRING "Development Team ID")
 set(CODE_SIGN_IDENTITY "" CACHE STRING "Sign Identity")
 set(FRAMEWORK_NAME "${PROJECT_CONFIG_NAME}" CACHE STRING "Framework Name")
 set(FRAMEWORK_BUNDLE_IDENTIFIER "com.ezored.library" CACHE STRING "Bundle Identifier")
-set(DEVICE_FAMILY "1,2" CACHE STRING "Device Family")
+
+if (PROJECT_CONFIG_GROUP STREQUAL "ios" OR "ios_simulator")
+    set(DEVICE_FAMILY "1,2" CACHE STRING "Device Family")
+elseif (PROJECT_CONFIG_GROUP STREQUAL "tvos" OR "tvos_simulator")
+    set(DEVICE_FAMILY "3" CACHE STRING "Device Family")
+elseif (PROJECT_CONFIG_GROUP STREQUAL "watchos")
+    set(DEVICE_FAMILY "4" CACHE STRING "Device Family")
+    set(CMAKE_SYSTEM_VERSION "10.5")
+elseif (PROJECT_CONFIG_GROUP STREQUAL "watchos_simulator")
+    set(DEVICE_FAMILY "4" CACHE STRING "Device Family")
+    set(CMAKE_SYSTEM_VERSION "10.5")
+endif()
 
 # Project
 project(${PROJECT_CONFIG_NAME})
@@ -219,6 +230,7 @@ set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES
     MACOSX_FRAMEWORK_IDENTIFIER "${FRAMEWORK_BUNDLE_IDENTIFIER}"
     MACOSX_FRAMEWORK_BUNDLE_VERSION "${PROJECT_CONFIG_VERSION}"
     MACOSX_FRAMEWORK_SHORT_VERSION_STRING "${PROJECT_CONFIG_VERSION}"
+    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "${FRAMEWORK_BUNDLE_IDENTIFIER}"
     XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "${CMAKE_OSX_DEPLOYMENT_TARGET}"
     XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "${CODE_SIGN_IDENTITY}"
     XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED NO
