--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -2,10 +2,6 @@ name: Ezored - iOS
 
 on: [push]
 
-env:
-  CMAKE_VERSION: "3.20.0"
-  NINJA_VERSION: "1.9.0"
-
 jobs:
   build:
     name: ${{ matrix.config.name }}
@@ -14,97 +10,65 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - {
-            name: "macOS Latest Clang",
-            os: macos-latest,
-            target: "ios_framework"
-          }
+          - {
+              name: "macOS Latest Clang",
+              os: macos-latest,
+              target: "ios_framework",
+            }
         python-version: [3.7]
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Upgrade PIP
-      run: python -m pip install --upgrade pip setuptools wheel
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Display Python version
-      run: python --version
+      - name: Upgrade PIP
+        run: python -m pip install --upgrade pip setuptools wheel
 
-    - name: Display PIP version
-      run: pip --version
+      - name: Display Python version
+        run: python --version
 
-    - name: Install Ninja and CMake
-      id: cmake_and_ninja
-      shell: cmake -P {0}
-      run: |
-        set(cmake_version $ENV{CMAKE_VERSION})
-        set(ninja_version $ENV{NINJA_VERSION})
+      - name: Display PIP version
+        run: pip --version
 
-        message(STATUS "Using host CMake version: ${CMAKE_VERSION}")
+      - name: Install CMake
+        uses: jwlawson/actions-setup-cmake@v1.8
+        with:
+          cmake-version: "3.20.0"
 
-        if ("${{ runner.os }}" STREQUAL "Windows")
-          set(ninja_suffix "win.zip")
-          set(cmake_suffix "win64-x64.zip")
-          set(cmake_dir "cmake-${cmake_version}-win64-x64/bin")
-        elseif ("${{ runner.os }}" STREQUAL "Linux")
-          set(ninja_suffix "linux.zip")
-          set(cmake_suffix "Linux-x86_64.tar.gz")
-          set(cmake_dir "cmake-${cmake_version}-Linux-x86_64/bin")
-        elseif ("${{ runner.os }}" STREQUAL "macOS")
-          set(ninja_suffix "mac.zip")
-          set(cmake_suffix "Darwin-x86_64.tar.gz")
-          set(cmake_dir "cmake-${cmake_version}-Darwin-x86_64/CMake.app/Contents/bin")
-        endif()
+      - name: Install Ninja
+        uses: seanmiddleditch/gha-setup-ninja@master
+        with:
+          version: "1.10.0"
 
-        set(ninja_url "https://github.com/ninja-build/ninja/releases/download/v${ninja_version}/ninja-${ninja_suffix}")
-        file(DOWNLOAD "${ninja_url}" ./ninja.zip SHOW_PROGRESS)
-        execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ./ninja.zip)
+      - name: Ezored - Install python dependencies
+        run: pip install -r requirements.txt
 
-        set(cmake_url "https://github.com/Kitware/CMake/releases/download/v${cmake_version}/cmake-${cmake_version}-${cmake_suffix}")
-        file(DOWNLOAD "${cmake_url}" ./cmake.zip SHOW_PROGRESS)
-        execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ./cmake.zip)
+      - name: Ezored - Install glue code tool
+        run: |
+          python make.py gluecode setup
+          python make.py gluecode version
 
-        # Save the path for other steps
-        file(TO_CMAKE_PATH "$ENV{GITHUB_WORKSPACE}/${cmake_dir}" cmake_dir)
-        message("::set-output name=cmake_dir::${cmake_dir}")
+      - name: Ezored - Setup conan
+        run: python make.py conan setup
 
-        if (NOT "${{ runner.os }}" STREQUAL "Windows")
-          execute_process(
-            COMMAND chmod +x ninja
-            COMMAND chmod +x ${cmake_dir}/cmake
-          )
-        endif()
+      - name: Ezored - Prepare
+        run: python make.py target ${{ matrix.config.target }} prepare
 
-    - name: Ezored - Install python dependencies
-      run: pip install -r requirements.txt
+      - name: Ezored - Build
+        run: python make.py target ${{ matrix.config.target }} build
 
-    - name: Ezored - Install glue code tool
-      run: | 
-        python make.py gluecode setup
-        python make.py gluecode version
+      - name: Ezored - Package
+        run: python make.py target ${{ matrix.config.target }} package --no-framework
 
-    - name: Ezored - Setup conan
-      run: python make.py conan setup
+      - name: Ezored - Dist generate
+        run: python make.py target ${{ matrix.config.target }} dist generate
 
-    - name: Ezored - Prepare
-      run: python make.py target ${{ matrix.config.target }} prepare
-
-    - name: Ezored - Build
-      run: python make.py target ${{ matrix.config.target }} build
-
-    - name: Ezored - Package
-      run: python make.py target ${{ matrix.config.target }} package --no-framework
-
-    - name: Ezored - Dist generate
-      run: python make.py target ${{ matrix.config.target }} dist generate
-
-    - name: Ezored - Dist upload
-      env:
-        EZORED_AWS_KEY_ID: ${{ secrets.EZORED_AWS_KEY_ID }}
-        EZORED_AWS_SECRET_KEY: ${{ secrets.EZORED_AWS_SECRET_KEY }}
-      run: python make.py target ${{ matrix.config.target }} dist upload --force
+      - name: Ezored - Dist upload
+        env:
+          EZORED_AWS_KEY_ID: ${{ secrets.EZORED_AWS_KEY_ID }}
+          EZORED_AWS_SECRET_KEY: ${{ secrets.EZORED_AWS_SECRET_KEY }}
+        run: python make.py target ${{ matrix.config.target }} dist upload --force
