--- a/projects/ios/Sample/Podfile
+++ b/projects/ios/Sample/Podfile
@@ -21,3 +21,12 @@ end
 target 'Sample' do
   shared_pods
 end
+
+# remove watch simulator invalid archs
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+              config.build_settings['EXCLUDED_ARCHS[sdk=watchsimulator*]'] = 'i386 arm64'
+        end
+  end
+end
