--- a/files/targets/android/cmake/CMakeLists.txt
+++ b/files/targets/android/cmake/CMakeLists.txt
@@ -2,14 +2,32 @@
 cmake_minimum_required(VERSION 3.20.0)
 get_filename_component(CMAKE_SOURCE_REALPATH "${CMAKE_SOURCE_DIR}/../../../../" REALPATH)
 
-set(PROJECT_CONFIG_NAME "ezored" CACHE STRING "Project Name")
-set(PROJECT_CONFIG_CPP_STANDARD "11" CACHE STRING "Cpp Standard")
-set(PROJECT_TARGET_NAME "android" CACHE STRING "Target Name")
-set(PROJECT_CONFIG_VERSION "1.0.0" CACHE STRING "Version")
-set(PROJECT_CONFIG_ARCH "armv8" CACHE STRING "Architecture")
+set(PROJECT_CONFIG_NAME
+    "ezored"
+    CACHE STRING "Project Name"
+)
+set(PROJECT_CONFIG_CPP_STANDARD
+    "11"
+    CACHE STRING "Cpp Standard"
+)
+set(PROJECT_TARGET_NAME
+    "android"
+    CACHE STRING "Target Name"
+)
+set(PROJECT_CONFIG_VERSION
+    "1.0.0"
+    CACHE STRING "Version"
+)
+set(PROJECT_CONFIG_ARCH
+    "armv8"
+    CACHE STRING "Architecture"
+)
 
 set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})
-set(PROJECT_BUILD_DIR ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_ARCH} CACHE INTERNAL "")
+set(PROJECT_BUILD_DIR
+    ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_ARCH}
+    CACHE INTERNAL ""
+)
 
 # Project
 project(${PROJECT_CONFIG_NAME})
@@ -22,29 +40,23 @@ conan_basic_setup()
 find_package(ndk-stl REQUIRED PATHS ".")
 
 # Include: common
-add_subdirectory(
-    ${PROJECT_ROOT_PATH}/files/common/cmake
-    ${PROJECT_BUILD_DIR}/common
-)
+add_subdirectory(${PROJECT_ROOT_PATH}/files/common/cmake ${PROJECT_BUILD_DIR}/common)
 
 # Header search paths
 set(PROJECT_HEADER_SEARCH_PATHS
     ${PROJECT_HEADER_SEARCH_PATHS}
     "${PROJECT_ROOT_PATH}/files/gluecode/support-lib"
-
     "${PROJECT_ROOT_PATH}/files/gluecode/app-domain/generated-src/jni"
     "${PROJECT_ROOT_PATH}/files/gluecode/app-enums/generated-src/jni"
     "${PROJECT_ROOT_PATH}/files/gluecode/app-core/generated-src/jni"
     "${PROJECT_ROOT_PATH}/files/gluecode/app-data-services/generated-src/jni"
     "${PROJECT_ROOT_PATH}/files/gluecode/app-system-services/generated-src/jni"
     "${PROJECT_ROOT_PATH}/files/gluecode/app-helpers/generated-src/jni"
-
     "${PROJECT_ROOT_PATH}/files/gluecode/logger/generated-src/jni"
     "${PROJECT_ROOT_PATH}/files/gluecode/http-client/generated-src/jni"
     "${PROJECT_ROOT_PATH}/files/gluecode/file-helper/generated-src/jni"
     "${PROJECT_ROOT_PATH}/files/gluecode/shared-data/generated-src/jni"
     "${PROJECT_ROOT_PATH}/files/gluecode/datetime/generated-src/jni"
-
     CACHE INTERNAL ""
 )
 
@@ -55,8 +67,12 @@ file(GLOB H_FILES_SUPPORT_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/support-l
 file(GLOB_RECURSE H_FILES_APP_DOMAIN_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-domain/generated-src/jni/*.h")
 file(GLOB_RECURSE H_FILES_APP_ENUMS_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-enums/generated-src/jni/*.h")
 file(GLOB_RECURSE H_FILES_APP_CORE_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-core/generated-src/jni/*.h")
-file(GLOB_RECURSE H_FILES_APP_DATA_SERVICES_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-data-services/generated-src/jni/*.h")
-file(GLOB_RECURSE H_FILES_APP_SYSTEM_SERVICES_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-system-services/generated-src/jni/*.h")
+file(GLOB_RECURSE H_FILES_APP_DATA_SERVICES_LIB_JNI
+     "${PROJECT_ROOT_PATH}/files/gluecode/app-data-services/generated-src/jni/*.h"
+)
+file(GLOB_RECURSE H_FILES_APP_SYSTEM_SERVICES_LIB_JNI
+     "${PROJECT_ROOT_PATH}/files/gluecode/app-system-services/generated-src/jni/*.h"
+)
 file(GLOB_RECURSE H_FILES_APP_HELPERS_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-helpers/generated-src/jni/*.h")
 
 file(GLOB_RECURSE H_FILES_LOGGER_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/logger/generated-src/jni/*.h")
@@ -65,8 +81,8 @@ file(GLOB_RECURSE H_FILES_FILE_HELPER_LIB_JNI "${PROJECT_ROOT_PATH}/files/glueco
 file(GLOB_RECURSE H_FILES_SHARED_DATA_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/shared-data/generated-src/jni/*.h")
 file(GLOB_RECURSE H_FILES_DATETIME_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/datetime/generated-src/jni/*.h")
 
-# uncomment only if you want use C++ http client instead of native android http client
-#file(GLOB H_FILES_HTTP_CLIENT_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/http-client/cpp/ezored/net/http/Simple*.hpp")
+# uncomment only if you want use C++ http client instead of native android http client file(GLOB
+# H_FILES_HTTP_CLIENT_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/http-client/cpp/ezored/net/http/Simple*.hpp")
 
 # Source files
 file(GLOB S_FILES_SUPPORT_LIB_CPP "${PROJECT_ROOT_PATH}/files/gluecode/support-lib/djinni/*.cpp")
@@ -77,8 +93,12 @@ file(GLOB S_FILES_SUPPORT_MAIN_LIB_CPP "${PROJECT_ROOT_PATH}/files/gluecode/supp
 file(GLOB_RECURSE S_FILES_APP_DOMAIN_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-domain/generated-src/jni/*.cpp")
 file(GLOB_RECURSE S_FILES_APP_ENUMS_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-enums/generated-src/jni/*.cpp")
 file(GLOB_RECURSE S_FILES_APP_CORE_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-core/generated-src/jni/*.cpp")
-file(GLOB_RECURSE S_FILES_APP_DATA_SERVICES_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-data-services/generated-src/jni/*.cpp")
-file(GLOB_RECURSE S_FILES_APP_SYSTEM_SERVICES_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-system-services/generated-src/jni/*.cpp")
+file(GLOB_RECURSE S_FILES_APP_DATA_SERVICES_LIB_JNI
+     "${PROJECT_ROOT_PATH}/files/gluecode/app-data-services/generated-src/jni/*.cpp"
+)
+file(GLOB_RECURSE S_FILES_APP_SYSTEM_SERVICES_LIB_JNI
+     "${PROJECT_ROOT_PATH}/files/gluecode/app-system-services/generated-src/jni/*.cpp"
+)
 file(GLOB_RECURSE S_FILES_APP_HELPERS_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/app-helpers/generated-src/jni/*.cpp")
 
 file(GLOB_RECURSE S_FILES_LOGGER_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/logger/generated-src/jni/*.cpp")
@@ -87,12 +107,11 @@ file(GLOB_RECURSE S_FILES_FILE_HELPER_LIB_JNI "${PROJECT_ROOT_PATH}/files/glueco
 file(GLOB_RECURSE S_FILES_SHARED_DATA_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/shared-data/generated-src/jni/*.cpp")
 file(GLOB_RECURSE S_FILES_DATETIME_LIB_JNI "${PROJECT_ROOT_PATH}/files/gluecode/datetime/generated-src/jni/*.cpp")
 
-# uncomment only if you want use C++ http client instead of native android http client
-#file(GLOB S_FILES_HTTP_CLIENT_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/http-client/cpp/ezored/net/http/Simple*.cpp")
+# uncomment only if you want use C++ http client instead of native android http client file(GLOB
+# S_FILES_HTTP_CLIENT_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/http-client/cpp/ezored/net/http/Simple*.cpp")
 
 # Merge lists
-set(
-    TARGET_HEADER_FILES 
+set(TARGET_HEADER_FILES
     ${H_FILES_SUPPORT_LIB_CPP}
     ${H_FILES_SUPPORT_LIB_JNI}
     ${H_FILES_APP_DOMAIN_LIB_JNI}
@@ -109,8 +128,7 @@ set(
     ${H_FILES_HTTP_CLIENT_LIB_IMPL}
 )
 
-set(
-    TARGET_SOURCE_FILES 
+set(TARGET_SOURCE_FILES
     ${S_FILES_SUPPORT_LIB_CPP}
     ${S_FILES_SUPPORT_MAIN_LIB_CPP}
     ${S_FILES_SUPPORT_LIB_JNI}
@@ -128,27 +146,31 @@ set(
     ${S_FILES_HTTP_CLIENT_LIB_IMPL}
 )
 
-set(
-    PROJECT_HEADER_FILES
-    ${PROJECT_HEADER_FILES}
-    ${TARGET_HEADER_FILES}
+set(PROJECT_HEADER_FILES
+    ${PROJECT_HEADER_FILES} ${TARGET_HEADER_FILES}
     CACHE INTERNAL ""
 )
 
-set(
-    PROJECT_SOURCE_FILES
-    ${PROJECT_SOURCE_FILES}
-    ${TARGET_HEADER_FILES}
-    ${TARGET_SOURCE_FILES}
+set(PROJECT_SOURCE_FILES
+    ${PROJECT_SOURCE_FILES} ${TARGET_HEADER_FILES} ${TARGET_SOURCE_FILES}
     CACHE INTERNAL ""
 )
 
 # CXX flags
-set(PROJECT_CMAKE_CXX_FLAGS "${PROJECT_CMAKE_CXX_FLAGS} -stdlib=libc++" CACHE INTERNAL "")
+set(PROJECT_CMAKE_CXX_FLAGS
+    "${PROJECT_CMAKE_CXX_FLAGS} -stdlib=libc++"
+    CACHE INTERNAL ""
+)
 
 # Flags
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PROJECT_CMAKE_C_FLAGS}" CACHE INTERNAL "")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${PROJECT_CMAKE_CXX_FLAGS}" CACHE INTERNAL "")
+set(CMAKE_C_FLAGS
+    "${CMAKE_C_FLAGS} ${PROJECT_CMAKE_C_FLAGS}"
+    CACHE INTERNAL ""
+)
+set(CMAKE_CXX_FLAGS
+    "${CMAKE_CXX_FLAGS} ${PROJECT_CMAKE_CXX_FLAGS}"
+    CACHE INTERNAL ""
+)
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
 set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_MINSIZEREL} -Os")
@@ -165,15 +187,16 @@ target_link_libraries(${PROJECT_CONFIG_NAME} "${PROJECT_LIBRARY_LINKS}")
 target_link_libraries(${PROJECT_CONFIG_NAME} "${PROJECT_FRAMEWORK_LINKS}")
 target_link_libraries(${PROJECT_CONFIG_NAME} "${CONAN_LIBS}")
 
-set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES
-    CXX_STANDARD "${PROJECT_CONFIG_CPP_STANDARD}"
-    CXX_STANDARD_REQUIRED YES
-    CXX_EXTENSIONS NO
-    CXX_VISIBILITY_PRESET default
-    VERSION "${PROJECT_CONFIG_VERSION}"
-    SOVERSION "${PROJECT_CONFIG_VERSION}"
-    PUBLIC_HEADER "${PROJECT_HEADER_FILES}"
-    LINK_FLAGS_RELEASE -s
+set_target_properties(
+    ${PROJECT_CONFIG_NAME}
+    PROPERTIES CXX_STANDARD "${PROJECT_CONFIG_CPP_STANDARD}"
+               CXX_STANDARD_REQUIRED YES
+               CXX_EXTENSIONS NO
+               CXX_VISIBILITY_PRESET default
+               VERSION "${PROJECT_CONFIG_VERSION}"
+               SOVERSION "${PROJECT_CONFIG_VERSION}"
+               PUBLIC_HEADER "${PROJECT_HEADER_FILES}"
+               LINK_FLAGS_RELEASE -s
 )
 
 target_compile_options(${PROJECT_CONFIG_NAME} PUBLIC "${PROJECT_COMPILE_OPTIONS}")
