--- a/files/targets/windows/cmake/CMakeLists.txt
+++ b/files/targets/windows/cmake/CMakeLists.txt
@@ -6,25 +6,30 @@ set(PROJECT_CONFIG_NAME
     "ezored"
     CACHE STRING "Project Name"
 )
-set(PROJECT_CONFIG_CPP_STANDARD
-    "11"
+
+set(PROJECT_CONFIG_CXX_STANDARD
+    "17"
     CACHE STRING "Cpp Standard"
 )
+
 set(PROJECT_TARGET_NAME
     "windows"
     CACHE STRING "Target Name"
 )
+
 set(PROJECT_CONFIG_VERSION
     "1.0.0"
     CACHE STRING "Version"
 )
+
 set(PROJECT_CONFIG_ARCH
     "x86_64"
     CACHE STRING "Architecture"
 )
 
 set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})
-set(PROJECT_BUILD_DIR
+
+set(PROJECT_BUILD_PATH
     ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_ARCH}
     CACHE INTERNAL ""
 )
@@ -33,43 +38,11 @@ set(PROJECT_BUILD_DIR
 project(${PROJECT_CONFIG_NAME})
 
 # Conan
-include(${PROJECT_BUILD_DIR}/conan/conanbuildinfo.cmake)
+include(${PROJECT_BUILD_PATH}/conan/conanbuildinfo.cmake)
 conan_basic_setup()
 
-# Include: common
-add_subdirectory(${PROJECT_ROOT_PATH}/files/common/cmake ${PROJECT_BUILD_DIR}/common)
-
-# Source files
-file(GLOB H_FILES_PROJECT "${PROJECT_ROOT_PATH}/projects/others/ezored/include/*.h"
-     "${PROJECT_ROOT_PATH}/projects/others/ezored/include/*.hpp"
-)
-file(GLOB S_FILES_PROJECT "${PROJECT_ROOT_PATH}/projects/others/ezored/src/*.cpp")
-
-file(GLOB H_FILES_LOGGER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/logger/cpp/ezored/util/Simple*.hpp")
-file(GLOB S_FILES_LOGGER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/logger/cpp/ezored/util/Simple*.cpp")
-
-file(GLOB H_FILES_HTTP_CLIENT_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/http-client/cpp/ezored/net/http/Simple*.hpp")
-file(GLOB S_FILES_HTTP_CLIENT_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/http-client/cpp/ezored/net/http/Simple*.cpp")
-
-file(GLOB H_FILES_SHARED_DATA_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/shared-data/cpp/ezored/data/Simple*.hpp")
-file(GLOB S_FILES_SHARED_DATA_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/shared-data/cpp/ezored/data/Simple*.cpp")
-
-file(GLOB H_FILES_FILE_HELPER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/file-helper/cpp/ezored/io/Simple*.hpp")
-file(GLOB S_FILES_FILE_HELPER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/file-helper/cpp/ezored/io/Simple*.cpp")
-
-# Merge lists
-set(TARGET_HEADER_FILES ${H_FILES_LOGGER_LIB_IMPL} ${H_FILES_HTTP_CLIENT_LIB_IMPL} ${H_FILES_SHARED_DATA_LIB_IMPL}
-                        ${H_FILES_FILE_HELPER_LIB_IMPL} ${H_FILES_PROJECT}
-)
-
-set(TARGET_SOURCE_FILES ${S_FILES_LOGGER_LIB_IMPL} ${S_FILES_HTTP_CLIENT_LIB_IMPL} ${S_FILES_SHARED_DATA_LIB_IMPL}
-                        ${S_FILES_FILE_HELPER_LIB_IMPL} ${S_FILES_PROJECT}
-)
-
-set(PROJECT_SOURCE_FILES
-    ${PROJECT_SOURCE_FILES} ${TARGET_SOURCE_FILES} ${TARGET_HEADER_FILES}
-    CACHE INTERNAL ""
-)
+# Common
+include(${PROJECT_ROOT_PATH}/files/common/cmake/common.cmake)
 
 # Flags
 set(CMAKE_C_FLAGS
@@ -90,7 +63,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -O3")
 include_directories(${PROJECT_HEADER_SEARCH_PATHS})
 link_directories(${PROJECT_LIBRARY_SEARCH_PATHS})
 
-add_executable(${PROJECT_CONFIG_NAME} ${PROJECT_SOURCE_FILES})
+add_executable(${PROJECT_CONFIG_NAME} ${PROJECT_SOURCE_FILES_MERGED})
 
 target_link_libraries(${PROJECT_CONFIG_NAME} "${PROJECT_LIBRARY_LINKS}")
 target_link_libraries(${PROJECT_CONFIG_NAME} "${PROJECT_FRAMEWORK_LINKS}")
@@ -98,7 +71,7 @@ target_link_libraries(${PROJECT_CONFIG_NAME} "${CONAN_LIBS}")
 
 set_target_properties(
     ${PROJECT_CONFIG_NAME}
-    PROPERTIES CXX_STANDARD "${PROJECT_CONFIG_CPP_STANDARD}"
+    PROPERTIES CXX_STANDARD "${PROJECT_CONFIG_CXX_STANDARD}"
                CXX_STANDARD_REQUIRED YES
                CXX_EXTENSIONS NO
                PUBLIC_HEADER "${PROJECT_HEADER_FILES}"
