--- a/files/targets/macos/cmake/CMakeLists.txt
+++ b/files/targets/macos/cmake/CMakeLists.txt
@@ -7,8 +7,8 @@ set(PROJECT_CONFIG_NAME
     CACHE STRING "Project Name"
 )
 
-set(PROJECT_CONFIG_CPP_STANDARD
-    "11"
+set(PROJECT_CONFIG_CXX_STANDARD
+    "17"
     CACHE STRING "Cpp Standard"
 )
 
@@ -57,35 +57,6 @@ conan_basic_setup()
 # Common
 include(${PROJECT_ROOT_PATH}/files/common/cmake/common.cmake)
 
-message(FATAL_ERROR "${PROJECT_SOURCE_FILES}")
-
-# Source files
-file(GLOB H_FILES_LOGGER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/logger/cpp/ezored/util/Simple*.hpp")
-file(GLOB S_FILES_LOGGER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/logger/cpp/ezored/util/Simple*.cpp")
-
-file(GLOB H_FILES_HTTP_CLIENT_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/http-client/cpp/ezored/net/http/Simple*.hpp")
-file(GLOB S_FILES_HTTP_CLIENT_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/http-client/cpp/ezored/net/http/Simple*.cpp")
-
-file(GLOB H_FILES_SHARED_DATA_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/shared-data/cpp/ezored/data/Simple*.hpp")
-file(GLOB S_FILES_SHARED_DATA_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/shared-data/cpp/ezored/data/Simple*.cpp")
-
-file(GLOB H_FILES_FILE_HELPER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/file-helper/cpp/ezored/io/Simple*.hpp")
-file(GLOB S_FILES_FILE_HELPER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/file-helper/cpp/ezored/io/Simple*.cpp")
-
-# Merge lists
-set(TARGET_HEADER_FILES ${H_FILES_LOGGER_LIB_IMPL} ${H_FILES_HTTP_CLIENT_LIB_IMPL} ${H_FILES_SHARED_DATA_LIB_IMPL}
-                        ${H_FILES_FILE_HELPER_LIB_IMPL} ${H_FILES_PROJECT}
-)
-
-set(TARGET_SOURCE_FILES ${S_FILES_LOGGER_LIB_IMPL} ${S_FILES_HTTP_CLIENT_LIB_IMPL} ${S_FILES_SHARED_DATA_LIB_IMPL}
-                        ${S_FILES_FILE_HELPER_LIB_IMPL} ${S_FILES_PROJECT}
-)
-
-set(PROJECT_SOURCE_FILES
-    ${PROJECT_SOURCE_FILES} ${TARGET_SOURCE_FILES} ${TARGET_HEADER_FILES}
-    CACHE INTERNAL ""
-)
-
 # Framework links
 set(PROJECT_FRAMEWORK_LINKS
     ${PROJECT_FRAMEWORK_LINKS} "-framework Foundation"
@@ -118,7 +89,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -O3")
 include_directories(${PROJECT_HEADER_SEARCH_PATHS})
 link_directories(${PROJECT_LIBRARY_SEARCH_PATHS})
 
-add_executable(${PROJECT_CONFIG_NAME} ${PROJECT_SOURCE_FILES})
+add_executable(${PROJECT_CONFIG_NAME} ${PROJECT_SOURCE_FILES_MERGED})
 
 target_link_libraries(${PROJECT_CONFIG_NAME} "${PROJECT_LIBRARY_LINKS}")
 target_link_libraries(${PROJECT_CONFIG_NAME} "${PROJECT_FRAMEWORK_LINKS}")
@@ -126,7 +97,7 @@ target_link_libraries(${PROJECT_CONFIG_NAME} "${CONAN_LIBS}")
 
 set_target_properties(
     ${PROJECT_CONFIG_NAME}
-    PROPERTIES CXX_STANDARD "${PROJECT_CONFIG_CPP_STANDARD}"
+    PROPERTIES CXX_STANDARD "${PROJECT_CONFIG_CXX_STANDARD}"
                CXX_STANDARD_REQUIRED YES
                CXX_EXTENSIONS NO
                PUBLIC_HEADER "${PROJECT_HEADER_FILES}"
