--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,11 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {
-              name: "Ubuntu Latest GCC",
-              os: ubuntu-latest,
-              target: "android",
-            }
+          - { name: "Ubuntu Latest GCC", os: ubuntu-latest, target: "android" }
         python-version: [3.7]
 
     steps:
