--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,11 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {
-              name: "macOS Latest Clang",
-              os: macos-latest,
-              target: "ios",
-            }
+          - { name: "macOS Latest Clang", os: macos-latest, target: "ios" }
         python-version: [3.7]
 
     steps:
